# backend/app/dto/setting.go
@@ -3,8 +3,9 @@ package dto
 import "time"
 
 type SettingInfo struct {
-	UserName string `json:"userName"`
-	Email    string `json:"email"`
+	UserName      string `json:"userName"`
+	Email         string `json:"email"`
+	SystemVersion string `json:"systemVersion"`
 
 	SessionTimeout string `json:"sessionTimeout"`
 	LocalTime      string `json:"localTime"`
@@ -41,15 +42,37 @@ type PasswordUpdate struct {
 }
 
 type SnapshotCreate struct {
-	BackupType  string `json:"backupType" validate:"required,oneof=OSS S3 SFTP MINIO"`
+	From        string `json:"from" validate:"required,oneof=OSS S3 SFTP MINIO"`
 	Description string `json:"description"`
+}
+type SnapshotRecover struct {
+	IsNew      bool `json:"isNew"`
+	ReDownload bool `json:"reDownload"`
+	ID         uint `json:"id" validate:"required"`
 }
 type SnapshotInfo struct {
 	ID          uint      `json:"id"`
 	Name        string    `json:"name"`
 	Description string    `json:"description"`
-	BackupType  string    `json:"backupType"`
+	From        string    `json:"from"`
 	Status      string    `json:"status"`
 	Message     string    `json:"message"`
 	CreatedAt   time.Time `json:"createdAt"`
+	Version     string    `json:"version"`
+
+	InterruptStep    string `json:"interruptStep"`
+	RecoverStatus    string `json:"recoverStatus"`
+	RecoverMessage   string `json:"recoverMessage"`
+	LastRecoveredAt  string `json:"lastRecoveredAt"`
+	RollbackStatus   string `json:"rollbackStatus"`
+	RollbackMessage  string `json:"rollbackMessage"`
+	LastRollbackedAt string `json:"lastRollbackedAt"`
+}
+
+type UpgradeInfo struct {
+	NewVersion  string `json:"newVersion"`
+	Tag         string `json:"tag"`
+	ReleaseNote string `json:"releaseNote"`
+	CreatedAt   string `json:"createdAt"`
+	PublishedAt string `json:"publishedAt"`
 }
